feat: make CORS origins configurable through application properties by using environment variables